// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard It should increment the counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    ProductCard
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard It should show <ProductCard /> properly with the custom title 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    ProductCard
  </h1>
</div>
`;
